--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/springboot_mybatis?characterEncoding=utf8&characterSetResults=utf8&autoReconnect=true&failOverReadOnly=false
+spring.datasource.url = jdbc:mysql://localhost:3306/springboot_mybatis?serverTimezone=GMT%2B8
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
