实现springboot集成邮件时间简单、html、带附件格式的邮件收发功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ mybatis.mapper-locations= classpath:mapper/*.xml
 logging.config=classpath:logback-spring.xml
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+spring.mail.host=smtp.163.com
+spring.mail.username=galgadot_my@163.com
+spring.mail.password=xxxx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
