集成thymeleaf实现发送带有模板格式的邮件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,10 @@ spring.datasource.min-idle=8
 spring.datasource.initial-size=10
 mybatis.mapper-locations= classpath:mapper/*.xml
 logging.config=classpath:logback-spring.xml
+#jsp\u914D\u7F6E
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+#\u90AE\u4EF6
 spring.mail.host=smtp.163.com
 spring.mail.username=galgadot_my@163.com
 spring.mail.password=xxxx
@@ -17,3 +19,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
+#Thymeleaf\u914D\u7F6E
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
