--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,17 @@ spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+#redis\u914D\u7F6E
+spring.redis.database=0
+spring.redis.host=10.161.106.224
+spring.redis.password=
+spring.redis.port=6379
+#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570
+spring.redis.jedis.pool.max-active=8
+#\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u8D1F\u503C\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-wait= -1
+#\u8FDE\u63A5\u6C60\u7A7A\u95F2\u8FDE\u63A5\u6570
+spring.redis.jedis.pool.max-idle=5
+spring.redis.jedis.pool.min-idle=0
+spring.redis.timeout=10000
 
