--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-#redis\u914D\u7F6E
+#redis\u914D\u7F6E \u4E2D\u8F6610.161.106.224
 spring.redis.database=0
-spring.redis.host=10.161.106.224
+spring.redis.host=192.168.31.224
 spring.redis.password=
 spring.redis.port=6379
 #\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570
