security实现权限控制，自定义PermissionEvaluator对hasPermission()方法的处理，新增sys_permission的entity、mapper、mapper.xml文件；修改CustomAuthenticationProvider中的usernamepasswordAuthenticationToken的第一个参数userDetails使其返回一个user对象。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,6 @@ spring.redis.jedis.pool.max-wait= -1
 spring.redis.jedis.pool.max-idle=5
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=10000
+#\u5F53\u9047\u5230\u540C\u6837\u540D\u5B57\u7684\u65F6\u5019\u662F\u5426\u5141\u8BB8\u8986\u76D6\u6CE8\u518C
+spring.main.allow-bean-definition-overriding=true
 
