--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.redis.database=0
 spring.redis.host=192.168.31.224
 spring.redis.password=
 spring.redis.port=6379
+spring.session.store-type=redis
 #\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570
 spring.redis.jedis.pool.max-active=8
 #\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u8D1F\u503C\u6CA1\u6709\u9650\u5236\uFF09
@@ -42,3 +43,6 @@ spring.redis.timeout=10000
 spring.main.allow-bean-definition-overriding=true
 #session\u8FC7\u671F\u65F6\u95F4  \u5355\u4F4D:s
 server.servlet.session.timeout=120
+#\u591A\u7AEF\u53E3\u53F7\u542F\u52A8\uFF0C\u5728\u4E0D\u6307\u5B9A\u7AEF\u53E3\u53F7\u662F\u9ED8\u8BA48080\uFF0C\u6307\u5B9A\u5B8C\u59829000\u518D\u6B21\u542F\u52A8\uFF0C\u4F1A\u53D1\u73B0\u540C\u65F6\u8FD0\u884C\u4E24\u4E2A\u7AEF\u53E3\u53F7
+#server.port=9000
+
