--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <artifactId>activemq-all</artifactId>
             <version>5.12.0</version>
         </dependency>
+        <!-- 引入Broker-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.5</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
