--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,11 @@ spring.main.allow-bean-definition-overriding=true
 server.servlet.session.timeout=120
 #\u591A\u7AEF\u53E3\u53F7\u542F\u52A8\uFF0C\u5728\u4E0D\u6307\u5B9A\u7AEF\u53E3\u53F7\u662F\u9ED8\u8BA48080\uFF0C\u6307\u5B9A\u5B8C\u59829000\u518D\u6B21\u542F\u52A8\uFF0C\u4F1A\u53D1\u73B0\u540C\u65F6\u8FD0\u884C\u4E24\u4E2A\u7AEF\u53E3\u53F7
 #server.port=9000
-
+#activemq\u914D\u7F6E
+spring.activemq.broker-url=tcp://192.168.31.224:61617
+spring.activemq.user=admin
+spring.activemq.password=admin
+#spring.activemq.pool.enabled=true
+#\u9ED8\u8BA4false:queue   true:topic
+spring.jms.pub-sub-domain=false
+myqueue=boot-activemq-queue
