topic生产者实现定时发送消息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,5 +51,6 @@ spring.activemq.user=admin
 spring.activemq.password=admin
 #spring.activemq.pool.enabled=true
 #\u9ED8\u8BA4false:queue   true:topic
-spring.jms.pub-sub-domain=false
+spring.jms.pub-sub-domain=true
 myqueue=boot-activemq-queue
+mytopic=boot-active-topic
